--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Dio Tipescript</title>
   </head>
   <body>
+    <input id="input" type="text" placeholder="Digite os dados" />
     <script src="./index.ts"></script>
   </body>
 </html>
